@@ -47,12 +47,12 @@ class Roda
         # Override the template name to use the view subdirectory if the
         # there is a view subdirectory and the template name does not
         # contain a slash.
-        def template_path(template, opts)
-          t = template.to_s
-          if (v = @_view_subdir) && t !~ /\//
-            template = "#{v}/#{t}"
+        def template_name(template)
+          if (v = @_view_subdir) && (t = template.to_s) !~ /\//
+            "#{v}/#{t}"
+          else
+            super
           end
-          super
         end
       end
     end
